# paths

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scenes/: bokeh_demo.yml  bunny.yml  doom.yml  dragon.yml  environment.yml  iron-man.yml  spheres_on_plane.yml  teapot.yml  teapot_lighting.yml
src/: bvh.rs  camera.rs  colour.rs  controller.rs  geom.rs  main.rs  material.rs  matrix.rs  model.rs  obj.rs  pixels.rs  ply.rs  renderer.rs  sampling.rs  scene.rs  serde.rs  stress.rs  timing.rs  trace.rs  vector.rs  worker.rs
src/paths/: bvh.rs  camera.rs  colour.rs  material.rs  matrix.rs  mod.rs  obj.rs  pixels.rs  renderer.rs  sampling.rs  scene.rs  serde.rs  vector.rs
