[package]
name = "paths"
version = "0.1.0"
authors = ["Ryan Norris <rynorris@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "^0.7.3"
image = "^0.23.4"
ply-rs = "^0.1.2"
rand = "^0.6.5"
sdl2 = { version = "0.31", features = ["unsafe_textures"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "^0.8"
threadpool = "^1.7.1"
tobj = "^2.0.0"

[profile.dev]
opt-level = 3

[profile.release]
debug = true
